temp UI fix, extends visibility to other displays

--- a/_sass/_includes/projects/solar_vr/solar_vr_display.scss
+++ b/_sass/_includes/projects/solar_vr/solar_vr_display.scss
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 0%;
   width: 100%;
-  height: 15%;
+  height: 30%;
   background-color: white;
   border: solid black 1px;
 
